--- a/_sass/baltic.scss
+++ b/_sass/baltic.scss
@@ -4,5 +4,5 @@
 @import "baltic/layout";
 
 html {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Jetbrains Mono", "Courier New", monospace;
 }
