Add more colors

--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -1,3 +1,9 @@
+$titles: #f8fafe;
+$body: #eaf4f8;
+$titles_dark: #162238;
+$body_dark: #303b52;
 $baltic: #24323f;
+$waves: #222d36;
+$seafloor: #2a3948;
 $kaliningrad: #293846;
-$riga: #473321;
+$riga: #f75341;
