--- a/_sass/baltic/layout.scss
+++ b/_sass/baltic/layout.scss
@@ -3,3 +3,13 @@ body {
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: $seafloor;
+    color: $body;
+
+    &.light {
+        background-color: $titles;
+        color: $body_dark;
+    }
+}
