--- a/_sass/baltic/layout.scss
+++ b/_sass/baltic/layout.scss
@@ -39,3 +39,18 @@ h1 {
         }
     }
 }
+
+.content-area {
+    display: block;
+    max-width: calc(100vw - $pad_h);
+    margin: 40px $pad_h;
+
+    p {
+        max-width: 90ch;
+    }
+
+    img {
+        max-width: 100%;
+        border-radius: 12px;
+    }
+}
