Add more nord-like colors

--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -6,4 +6,11 @@ $baltic: #24323f;
 $waves: #222d36;
 $seafloor: #2a3948;
 $kaliningrad: #293846;
+$gotland: #5e81ac;
+$helsinki: #7f9fbf;
+$vilnius: #86bfd4;
+$stockholm: #92b1bf;
+$gothenburg: #a2bf8f;
+$sarek: #ebb591;
+$tallinn: #c0656f;
 $riga: #f75341;
