Add Nord syntax-highlighting rules for Rouge

--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -6,11 +6,18 @@ $baltic: #24323f;
 $waves: #222d36;
 $seafloor: #2a3948;
 $kaliningrad: #293846;
+$nord: #2e3440;
+$kihnu: #4f6a92;
 $gotland: #5e81ac;
 $helsinki: #7f9fbf;
 $vilnius: #86bfd4;
-$stockholm: #92b1bf;
+$stockholm: #92c1bf;
 $gothenburg: #a2bf8f;
 $sarek: #ebb591;
+$kurische: #ffea91;
 $tallinn: #c0656f;
 $riga: #f75341;
+$dainava: #b77fb1;
+$nord_snow_dark: #d8dee9;
+$nord_snow_med: #e5e9f0;
+$nord_snow_light: #eceff4;
