--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="{{'/assets/css/style.css' | absolute_url}}">
+<title>{{page.title}}</title>
 {{fonts}}
