--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,20 @@
 <header class="header">
-    
+    {%- assign nav_pages = site.header_pages -%}
+    {%- assign nav_size = nav_pages | size -%}
+
     <div class="header-title">
         <a class="header-title-link" href="/">{{site.title}}</a>
     </div>
+
+    {%- if nav_size > 0 -%}
+    <nav class="header-nav">
+        {%- for path in nav_pages -%}
+            {%- assign page = site.pages | where: "path", path | first -%}
+            {%- if page.title -%}
+            <a class="header-nav-link" href="{{ page.url | relative_url }}">{{page.title | escape}}</a>
+            {%- endif -%}
+        {%- endfor -%}
+    </nav>
+    {%- endif -%}
 
 </header>
