Better align Baltic colors with nord blue hues

--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -3,8 +3,8 @@ $body: #eaf4f8;
 $titles_dark: #162238;
 $body_dark: #303b52;
 $baltic: #24323f;
-$waves: #222d36;
-$seafloor: #2a3948;
+$waves: #222d3b;
+$seafloor: #1F2632;
 $kaliningrad: #293846;
 $nord: #2e3440;
 $kihnu: #4f6a92;
