Fix <hr> colors in chromium browsers (tested in brave - now behaves like firefox)

--- a/_sass/baltic.scss
+++ b/_sass/baltic.scss
@@ -43,6 +43,9 @@ a {
 
 hr {
     color: $vilnius;
+    background-color: $vilnius;
+    border-color: $vilnius;
+
     max-width: 90ch;
     margin: 40px 0;
 }
