Bold the site-author name when it appears in a publication author list

--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -25,15 +25,12 @@
         {%- if include.date -%}
             [<span class="pub-date">{{ include.date | escape }}</span>]&nbsp;
         {%- endif -%}
-        <!-- <br/> -->
         {%- if include.doi -%}[<span class="pub-meta_special">doi#:</span> <span class="pub-meta_doi">{{include.doi}}</span>]<br/>{%- endif -%}
         {%- if include.venue -%}
             <span class="pub-venue"><em class="pub-venue_name">{{include.venue | escape}}</em>
             {%- if include.volume -%}, vol. <span class="pub-meta_num">{{ include.volume | escape }}</span>{%- endif -%}
             {%- if include.number -%}, no. <span class="pub-meta_num">{{ include.number | escape }}</span>{%- endif -%}
             {%- if include.pages -%}, pp. <span class="pub-meta_num">{{ include.pages | escape }}</span>{%- endif -%}
-            <!-- <br/> -->
-            <!-- {%- if include.doi -%}[<span class="pub-meta_special">doi#:</span> <span class="pub-meta_doi">{{include.doi}}</span>]{%- endif -%} -->
             </span>
         {%- endif -%}
     </p>
@@ -43,9 +40,10 @@
     {%- assign author_list = include.authors | split: "," -%}
     <p class="pub-authors">
         {%- for author in author_list -%}
-            {%- assign is_site_author = (author == site.author.name) | trim | default false -%}
+            {%- assign author_comp = author | strip -%}
+            {%- assign author_site = site.author.name | strip -%}
             {%- if forloop.last -%}&amp;{%- endif -%}
-            {%- if is_site_author %-}
+            {%- if author_comp == author_site -%}
                 <span class="pub-author pub-author_is-site-author">{{author | escape}}</span>
             {%- else -%}
                 <span class="pub-author">{{author | escape}}</span>
