--- a/_sass/baltic.scss
+++ b/_sass/baltic.scss
@@ -119,7 +119,8 @@ hr {
     .pub-date,
     .pub-meta_special,
     .pub-venue_name,
-    .pub-meta-num {
+    .pub-meta-num,
+    .pub-author_is-site-author {
         font-weight: 900;
     }
 
