Add footer structure (MVP) Allows total override of content with footer_about and footer_links.html

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,8 +8,10 @@
         {%- include header.html -%}
 
         <main class="content-area">
-        {{content}}
+            {{content}}
         </main>
+
+        {%- include footer.html -%}
 
     </body>
 
