--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -1,5 +1,5 @@
 $titles: #f8fafe;
-$body: #eaf4f8;
+$body: #eff2f4;
 $titles_dark: #162238;
 $body_dark: #303b52;
 $baltic: #24323f;
@@ -12,7 +12,9 @@ $gotland: #5e81ac;
 $helsinki: #7f9fbf;
 $vilnius: #86bfd4;
 $stockholm: #92c1bf;
+$stockholm_dark: #72a19f;
 $gothenburg: #a2bf8f;
+$gothenburg_dark: #9ab279;
 $sarek: #ebb591;
 $kurische: #ffea91;
 $tallinn: #c0656f;
