Add and modify some colors Less green, more bluish gray

--- a/_sass/baltic/color.scss
+++ b/_sass/baltic/color.scss
@@ -1,10 +1,14 @@
 $titles: #f8fafe;
 $body: #eff2f4;
+$header: #181f2c;
 $titles_dark: #162238;
 $body_dark: #303b52;
 $baltic: #24323f;
-$waves: #222d3b;
+$waves: #282d3b;
 $seafloor: #1F2632;
+$squall: #282d3b;
+$deep: #232732;
+$shallow: #4c576b;
 $kaliningrad: #293846;
 $nord: #2e3440;
 $kihnu: #4f6a92;
@@ -17,6 +21,7 @@ $gothenburg: #a2bf8f;
 $gothenburg_dark: #9ab279;
 $sarek: #ebb591;
 $kurische: #ffea91;
+$visby: #f89a47;
 $tallinn: #c0656f;
 $riga: #f75341;
 $dainava: #b77fb1;
