Add mathjax support Part of #3: Adds LaTeX support

--- a/_sass/baltic.scss
+++ b/_sass/baltic.scss
@@ -345,3 +345,10 @@ ul.link-list {
     margin: 2rem 0;
 }
 
+.MathJax {
+    font-size: 13px !important; 
+    max-width: 90ch;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
