--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="{{'/assets/css/style.css' | absolute_url}}">
+
+{%- if site.kramdown.math_engine == "mathjax" -%}
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+{%- endif -%}
+
 <title>{{page.title}} - {{site.title}}</title>
 {%- include fonts.html -%}
